ARROW-12668: [C++][Dataset] Fix segfault in CountRows